Fix overlapping in modal
Issue: PLCR1801-66

--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -685,6 +685,7 @@
       .pl-modal {
         .pl-modal-title {
           padding: 20px 20px 0;
+          max-width: 90%;
         }
 
         .pl-modal-body {
